Fix: page overflow

--- a/apps/trello-clone/src/app/domain/home/welcome-page/welcome-page.component.scss
+++ b/apps/trello-clone/src/app/domain/home/welcome-page/welcome-page.component.scss
@@ -4,6 +4,7 @@
     overflow: auto;
     height: 100% !important;
     overflow-x: auto;
+    overflow-y: hidden;
     position: relative;
     width: 100vw;
 
